2019-03-06 Fixed problem with not selectable placeholder text in filled gap after reset command
2019-02-26 Added Manual grading and Title properties in Paragraph and Paragraph Keyboard modules
2019-02-21 Fix for problem with dissapearing Source List items after drag stop
2019-02-08 Fixed adding selectable characters in word in Text Coloring
2019-01-31 Added starting values to connection modules
2019-01-28 Fixed problem with recreating gaps on show command
2019-01-22 Fixed getting error count in Shooting Range module
2019-01-21 Added disable and enable commands for TextAudio addon
2019-01-14 Added new addon Limited Submit
2019-01-14 Fixed a model in media recorder addon
2019-01-14 Added a end of game event to a shooting range addon
2019-01-14 Fixed setting state in Coloring module
2019-01-14 Fixed the problem of latex reloading in a quiz addon
2019-01-11 Added disable enable commands to Media Recorder addon
2019-01-10 Fixed view shift on mobile devices in Points and lines, Connecting dots, Coloring
2019-01-10 Added commands to Text, Ordering, Image Gap and Choice
2019-01-10 Changed the behavior of the point counter in a Catch addon
2019-01-04 Fixed setting player controller in Shape Tracing module
2019-01-02 Added command isOK to a connection addon
2018-12-21 Fixed a rerendered mathjax of text module
2018-12-19 Fixed reseting after using setText command in Text module
2018-12-17 Fixed ekeyboard paragraph loading on the first page of mCourser
2018-12-17 Fixed mathjax calls
2018-12-12 Fixed shape tracing scaling on mobile devices
2018-12-11 Upgraded tinymce library
2018-11-28 Fixed media recorder on safari mobile devices and mLibro
2018-11-28 Fixed reset issue in Shooting Range
2018-11-27 Fixed issues with inline display: none in multiple addons
2018-11-21 Fixed toolbar and added color pickers in Paragraph module
2018-11-09 Fixed hyperlinks in feedback
2018-11-05 Added alt text to audiodescriptions in video