@@ -4,6 +4,7 @@ function AddonSlideshow_create() {
 
     presenter.isPlaying = false;
     presenter.eventBus = null;
+    presenter.noAudioPlayer = null;
 
     var DOMElements = {};
     var loadedImagesDeferred = $.Deferred(),
@@ -27,7 +28,8 @@ function AddonSlideshow_create() {
         'T_04': "Text end time must be higher than start time!",
         'T_05': "Top position value is invalid!",
         'T_06': "Left position value is invalid!",
-        'T_07': "If more than one text is set, each one of them have to be set properly!"
+        'T_07': "If more than one text is set, each one of them have to be set properly!",
+        'N_01': "If 'no audio' is checked, presentation duration must be a positive number"
     };
 
     presenter.TIME_LINE_TASK = {
@@ -138,6 +140,14 @@ function AddonSlideshow_create() {
     }
 
     function loadAudio(isPreview) {
+
+        if (presenter.configuration.noAudio) {
+            presenter.configuration.buzzAudio = new buzz.sound([]);
+            presenter.configuration.audioLoadComplete = true;
+            loadedAudioDeferred.resolve();
+            return {isError: false};
+        }
+
         if (!buzz.isSupported()) return { isError:true, errorCode:"A_01" };
 
         if (!buzz.isMP3Supported() && !buzz.isOGGSupported()) {
@@ -151,6 +161,9 @@ function AddonSlideshow_create() {
         buzz.defaults.autoplay = false;
         buzz.defaults.loop = false;
 
+        if (presenter.configuration.noAudio) {
+            presenter.configuration.buzzAudio = new buzz.sound([]);
+        }
         if (buzz.isOGGSupported()) {
             presenter.configuration.buzzAudio = new buzz.sound([
                 presenter.configuration.audio.OGG
@@ -195,6 +208,11 @@ function AddonSlideshow_create() {
         };
     }
 
+    function updateSlideCounter(index) {
+        var timeText = (index + 1) + '/' + presenter.configuration.slides.count;
+        DOMElements.controls.counter.text(timeText);
+    }
+
     function executeTasks(time, withoutAnimation) {
         var isTextAnimation = presenter.configuration.textAnimation && !withoutAnimation;
         var isSlideAnimation = presenter.configuration.slideAnimation && !withoutAnimation;
@@ -211,6 +229,7 @@ function AddonSlideshow_create() {
                         for (var j = 0; j < presenter.configuration.slides.domReferences.length; j++) {
                             var $slideElement = $(presenter.configuration.slides.domReferences[j]);
                             if (j === showIndex) {
+                                updateSlideCounter(j);
                                 if (isSlideAnimation) {
                                     $slideElement.show("fade", {}, 2000);
                                 } else {
@@ -259,22 +278,54 @@ function AddonSlideshow_create() {
 
     presenter.pauseAudioResource = function () {
         presenter.isPlaying = false;
-        if (presenter.configuration.audio.wasPlayed) {
-            try {
-                presenter.configuration.buzzAudio.pause();
-            } catch (exception) {}  //There can ba DOMException, if audio was player but was still buffering
+        if (presenter.configuration.noAudio) {
+            presenter.pauseNoAudioPlayer();
+        } else {
+            if (presenter.configuration.audio.wasPlayed) {
+                try {
+                    presenter.configuration.buzzAudio.pause();
+                } catch (exception) {
+                }  //There can ba DOMException, if audio was player but was still buffering
+            }
         }
     };
 
     presenter.playAudioResource = function () {
         presenter.isPlaying = true;
-        presenter.configuration.audio.wasPlayed = true;
-        var nopromise = {
-           catch : new Function()
-        };
+        if (presenter.configuration.noAudio) {
+            presenter.startNoAudioPlayer();
+        } else {
+            presenter.configuration.audio.wasPlayed = true;
+            var nopromise = {
+                catch: new Function()
+            };
 
-        (presenter.configuration.buzzAudio.get().play() || nopromise).catch(function () {} ); //There can ba DOMException, if audio was player but was still buffering
+            (presenter.configuration.buzzAudio.get().play() || nopromise).catch(function () {
+            }); //There can ba DOMException, if audio was player but was still buffering
+        }
     };
+
+    presenter.startNoAudioPlayer = function() {
+        presenter.noAudioPlayer = setInterval(noAudioPlay,1000);
+    };
+
+    presenter.pauseNoAudioPlayer = function() {
+        clearInterval(presenter.noAudioPlayer);
+        presenter.noAudioPlayer = null;
+    };
+
+
+    function noAudioPlay() {
+        var time = presenter.time + 1;
+        if (time > presenter.configuration.maxTime) {
+            onPresentationEnd();
+            return;
+        }
+        executeTasks(time, false);
+        presenter.configuration.currentTime = time;
+        presenter.time = time;
+
+    }
 
     function timeUpdateCallback() {
         if (presenter.configuration.audioState !== presenter.AUDIO_STATE.STOP) {
@@ -292,18 +343,7 @@ function AddonSlideshow_create() {
         }
 
         if (presenter.configuration.buzzAudio.getTime() + 0.3 > presenter.configuration.buzzAudio.getDuration()) {
-            $(DOMElements.controls.currentTime).text('00:00');
-            changeButtonToPlay();
-            updateProgressBar(0);
-            presenter.configuration.currentTime = 0;
-            presenter.pauseAudioResource();
-            if (presenter.configuration.audioState == presenter.AUDIO_STATE.STOP) {
-                presenter.sendValueChangedEvent("end");
-            }
-            presenter.configuration.audioState = presenter.AUDIO_STATE.STOP;
-            hideAllTexts();
-            // This action will trigger time update callback, but it's the only way to assure that pressing play after end/stop will trigger playing audio
-            executeTasks(0, true);
+            onPresentationEnd();
             return;
         }
 
@@ -312,6 +352,21 @@ function AddonSlideshow_create() {
         }
 
         executeTasks(presenter.configuration.currentTime, false);
+    }
+
+    function onPresentationEnd() {
+        $(DOMElements.controls.currentTime).text('00:00');
+        changeButtonToPlay();
+        updateProgressBar(0);
+        presenter.configuration.currentTime = 0;
+        presenter.pauseAudioResource();
+        if (presenter.configuration.audioState == presenter.AUDIO_STATE.STOP) {
+            presenter.sendValueChangedEvent("end");
+        }
+        presenter.configuration.audioState = presenter.AUDIO_STATE.STOP;
+        hideAllTexts();
+        // This action will trigger time update callback, but it's the only way to assure that pressing play after end/stop will trigger playing audio
+        executeTasks(0, true);
     }
 
     function getContainerPadding() {
@@ -430,6 +485,10 @@ function AddonSlideshow_create() {
         for (var i = 0; i < presenter.configuration.slides.domReferences.length; i++) {
             $(presenter.configuration.slides.domReferences[i]).stop(true, true);
         }
+
+        if (presenter.noAudioPlayer) {
+            presenter.pauseNoAudioPlayer();
+        }
     }
 
     presenter.stopPresentation = function() {
@@ -457,6 +516,9 @@ function AddonSlideshow_create() {
     };
 
     presenter.setTimeFromSlideIndex = function (slideIndex) {
+        if (presenter.configuration.noAudio) {
+            return;
+        }
         var slide = presenter.configuration.slides.content[slideIndex];
         var time = slide.start;
         presenter.configuration.buzzAudio.setTime(time);
@@ -1085,6 +1147,7 @@ function AddonSlideshow_create() {
         DOMElements.controls.progressbar = $(DOMElements.viewContainer.find('.slideshow-controls-progressbar:first')[0]);
         DOMElements.controls.slider = $(DOMElements.viewContainer.find('.slideshow-controls-progressbar-slider:first')[0]);
         DOMElements.controls.line = $(DOMElements.viewContainer.find('.slideshow-controls-progressbar-line:first')[0]);
+        DOMElements.controls.counter = $(DOMElements.viewContainer.find('.slideshow-controls-slide-counter:first')[0]);
     }
 
     function getControlButtonsDOMElements() {
@@ -1097,9 +1160,33 @@ function AddonSlideshow_create() {
         };
     }
 
+    presenter.upgradeModel = function (model) {
+        var upgradedModel = upgradeModelNoAudio(model);
+        return upgradedModel;
+    };
+
+    function upgradeModelNoAudio(model) {
+        var upgradedModel = {};
+        $.extend(true, upgradedModel, model);
+        if (!upgradedModel['No audio']) {
+            upgradedModel['No audio'] = 'False'
+        }
+        return upgradedModel;
+    }
+
     presenter.setPlayerController = function (controller) {
         presenter.playerController = controller;
         presenter.eventBus = controller.getEventBus();
+    };
+
+    presenter.hideInactiveControls = function () {
+      if (presenter.configuration.noAudio) {
+            DOMElements.controls.timer.css('display','none');
+            DOMElements.controls.progressbar.css('display','none');
+      }  else {
+          DOMElements.controls.counter.css('display','none');
+      }
+
     };
 
     function presenterLogic(view, model, preview) {
@@ -1112,12 +1199,13 @@ function AddonSlideshow_create() {
             }
         }
 
+        model = presenter.upgradeModel(model);
         presenter.configuration = presenter.validateModel(model, preview);
         if (presenter.configuration.isError) {
             DOMOperationsUtils.showErrorMessage(view, presenter.ERROR_CODES, presenter.configuration.errorCode);
             return;
         }
-        
+
         if (!preview) {
             $.when(loadedAudioDeferred, loadedImagesDeferred, loadedTextDeferred).done(function () {
                 hideLoadingScreen();
@@ -1165,6 +1253,7 @@ function AddonSlideshow_create() {
                     presenter.stopPresentation();
                 }
             });
+            presenter.hideInactiveControls();
         } else {
         	if (presenter.configuration.groupNextAndPrevious) {
 	            var $container = $(DOMElements.controls.container);
@@ -1194,7 +1283,7 @@ function AddonSlideshow_create() {
 	            },
 	            isMouseDragged : false
 	        };
-
+            presenter.hideInactiveControls();
             hideLoadingScreen();
         }
 
@@ -1678,15 +1767,21 @@ function AddonSlideshow_create() {
     };
 
     presenter.validateModel = function (model, isPreview) {
+        var noAudio = ModelValidationUtils.validateBoolean(model["No audio"]);
 		var animationValidationResult = presenter.validateAnimation(model["Slide animation"], model["Text animation"]);
 
-		var audioValidationResult = presenter.validateAudio(model.Audio[0]);
-		if (audioValidationResult.isError) {
-			return {
-				isError : true,
-				errorCode : audioValidationResult.errorCode
-			};
-		}
+		var audioValidationResult = null;
+		if (noAudio) {
+		    audioValidationResult = {audio: null};
+        } else {
+            audioValidationResult = presenter.validateAudio(model.Audio[0]);
+            if (audioValidationResult.isError) {
+                return {
+                    isError: true,
+                    errorCode: audioValidationResult.errorCode
+                };
+            }
+        }
 
         var slidesValidationResult = presenter.validateSlides(model.Slides);
         if (slidesValidationResult.isError) {
@@ -1702,6 +1797,11 @@ function AddonSlideshow_create() {
                 isError:true,
                 errorCode:textsValidationResult.errorCode
             };
+        }
+
+        var maxDuration = parseInt(model['Presentation duration']);
+        if (noAudio && (isNaN(maxDuration) || maxDuration <= 0)) {
+            return {isError: true, errorCode: 'N_01'};
         }
 
         var showSlide = 1;
@@ -1724,7 +1824,9 @@ function AddonSlideshow_create() {
             showSlide: showSlide,
             isVisibleByDefault: isVisibleByDefault,
             isVisible: isVisibleByDefault,
-            addonID: model['ID']
+            addonID: model['ID'],
+            noAudio: noAudio,
+            maxTime: maxDuration
         };
     };
 
