@@ -6,6 +6,7 @@
         <span class="slideshow-controls-timer-time">00:00</span>
         <span class="slideshow-controls-timer-separator">/</span>
         <span class="slideshow-controls-timer-duration">12:34</span>
+        <span class="slideshow-controls-slide-counter">3/12</span>
     </div>
     <div class="slideshow-controls-progressbar">
         <div class="slideshow-controls-progressbar-line"></div>
