@@ -35,6 +35,7 @@
     padding-right: 5px;
 }
 
+.slideshow-controls-slide-counter,
 .slideshow-controls-timer,
 .slideshow-controls-play,
 .slideshow-controls-play-mouse-hover,
