@@ -11,6 +11,7 @@
         <div class="slideshow-controls-progressbar-line"></div>
         <div class="slideshow-controls-progressbar-slider"></div>
     </div>
+    <div class="slideshow-controls-slide-counter">1/10</div>
     <div class="slideshow-controls-previous">Previous</div>
     <div class="slideshow-controls-next">Next</div>
 </div>
