@@ -1200,6 +1200,8 @@ var ice_dictionary_mx = {
 	"Slideshow_property_show_slide": "Mostrar diapositiva",
 	"Slideshow_property_group_next_and_previous_buttons": "Agrupar botones de siguiente y previo",
 	"Slideshow_property_narration": "Narración",
+	"Slideshow_property_no_audio": "No audio",
+	"Slideshow_property_presentation_duration": "Presentation duration",
 	"Standard_Shapes_info": "Permite insertar formas básicas a la presentación, incluyendo líneas, cuadrados, rectángulos, círculos o elipses.",
 	"Standard_Shapes_name": "Formas básicas",
 	"Standard_Shapes_property_shape": "Forma",
