@@ -1,3 +1,4 @@
+2019-03-08 Added 'no audio' option to the slideshow addon
 2019-03-06 Fixed problem with not selectable placeholder text in filled gap after reset command
 2019-02-26 Added Manual grading and Title properties in Paragraph and Paragraph Keyboard modules
 2019-02-21 Fix for problem with dissapearing Source List items after drag stop
